--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis corrupti quidem tempora optio minima sequi, alias ipsam magnam. Quidem deleniti optio rem qui minima facilis obcaecati, impedit dolores doloremque dolore fuga enim ipsa sit similique, quia natus voluptas placeat exercitationem officia ut ipsam quo! Explicabo voluptatem enim laudantium ab voluptas.</p>
           </div>
         </div>
         <div class="carousel-item">
